# STR-2023

./: README.md
Work#1/: README.md  ex1.c  ex3.c  ex4_a.c  ex4_b.c  ex5_1.c  ex5_3.c  ex6.c
Work#2/Entrega/t2g5r2-str24/PartIII/: README.md
Work#2/Entrega/t2g5r2-str24/PartIII/t2g5e6_package/: CMakeLists.txt  package.xml
Work#2/Entrega/t2g5r2-str24/PartIII/t2g5e6_package/launch/: run.launch
Work#2/Entrega/t2g5r2-str24/PartIII/t2g5e6_package/rviz/: default.rviz
Work#2/Entrega/t2g5r2-str24/PartIII/t2g5e6_package/src/: t2g5e6.cpp
Work#2/Entrega/t2g5r2-str24/PartI_PartII/: README.txt  ex1_4.c  ex2.c  ex3.c  ex5.c  funcs.h  p1  p2
