<?xml version="1.0"?>
<package format="2">
    <name>t2g5e6_package</name>
    <version>0.0.0</version>
    <description>The str ros package.</description>

    <maintainer email="duarte-cruz-98@outlook.com">Duarte Gonçalo</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <!-- <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/> -->
    </export>
</package>
